--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
+title: LYJ's Blog
+email: liuyajiao2020@mail.ynu.edu.com
+url: https://lhiii.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+skills: "Welcome to my blog. This is a place to share my school life:)"
+meta_author: Yajiao Liu
 
 # Google webmaster tools
 google_verify:
